feat(jans-lock): handle Cedarling https requests in integration tests
Signed-off-by: Yuriy <Yuriy.Movchan@gmail.com>